--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <script src="/registerSW.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M App</title>
+    <title>Duty App</title>
   </head>
   <body>
     <div id="app"></div>
